--- a/index.html
+++ b/index.html
@@ -1,11 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>alpha-clash</title>
-</head>
-<body>
-    
-</body>
+
+    <!-- daisy and tailwind -->
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.10.1/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- custom css -->
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body class="font-poppins">
+    <main
+      class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center text-white"
+    >
+      <!-- home screen -->
+      <section
+        class="home min-h-screen flex justify-center items-center hidden"
+      >
+        <div class="flex flex-col items-center gap-10">
+          <h1 class="text-8xl font-anton uppercase">Alpha Clash Pro</h1>
+          <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+          <button class="btn bg-white text-black">Play Now</button>
+        </div>
+      </section>
+      <!-- play ground -->
+      <section class="play-ground hidden">
+        <div class="flex flex-col justify-center items-center gap-20 pt-20">
+          <!-- screen -->
+
+          <div
+            class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]"
+          >
+            <div class="flex justify-center">
+              <p class="bg-[#2F2941] px-4 pb-4 rounded-b-xl text-white">
+                Don't watch keyboard while playing...
+              </p>
+            </div>
+
+            <div class="flex justify-center items-center min-h-full">
+              <p class="text-black text-9xl font-bold">Y</p>
+            </div>
+          </div>
+
+          <!-- kye board -->
+          <div>
+            <div class="flex justify-center gap-1 my-1 w-full text-black">
+              <kbd class="kbd">q</kbd>
+              <kbd class="kbd">w</kbd>
+              <kbd class="kbd">e</kbd>
+              <kbd class="kbd">r</kbd>
+              <kbd class="kbd">t</kbd>
+              <kbd class="kbd">y</kbd>
+              <kbd class="kbd">u</kbd>
+              <kbd class="kbd">i</kbd>
+              <kbd class="kbd">o</kbd>
+              <kbd class="kbd">p</kbd>
+            </div>
+            <div class="flex justify-center gap-1 my-1 w-full text-black">
+              <kbd class="kbd">a</kbd>
+              <kbd class="kbd">s</kbd>
+              <kbd class="kbd">d</kbd>
+              <kbd class="kbd">f</kbd>
+              <kbd class="kbd">g</kbd>
+              <kbd class="kbd">h</kbd>
+              <kbd class="kbd">j</kbd>
+              <kbd class="kbd">k</kbd>
+              <kbd class="kbd">l</kbd>
+            </div>
+            <div class="flex justify-center gap-1 my-1 w-full text-black">
+              <kbd class="kbd">z</kbd>
+              <kbd class="kbd">x</kbd>
+              <kbd class="kbd">c</kbd>
+              <kbd class="kbd">v</kbd>
+              <kbd class="kbd">b</kbd>
+              <kbd class="kbd">n</kbd>
+              <kbd class="kbd">m</kbd>
+              <kbd class="kbd">/</kbd>
+            </div>
+          </div>
+          <!-- score and life -->
+          <div class="flex justify-between w-3/4">
+            <button
+              class="btn rounded-full text-white bg-[#894189] border-none items-center px-5"
+            >
+              <span>Life</span>
+              <img src="images/life.svg" alt="#" />
+              <span>1</span>
+            </button>
+            <button
+              class="btn rounded-full text-white bg-[#360490] border-none items-center px-5"
+            >
+              <span>Score</span>
+              <img src="images/score.svg" alt="#" />
+              <span>1</span>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- score part -->
+      <section class="score flex justify-center items-center min-h-screen">
+        <div class="text-center space-y-5 bg-[#FFFFFF33] p-5 rounded-lg">
+          <h1 class="text-8xl">
+            <span>Score:</span>
+            <span>14</span>
+          </h1>
+          <button class="btn">Play Again</button>
+          <p>Practice will make you Pro</p>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
