--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
     >
       <!-- home screen -->
       <section
-        class="home min-h-screen flex justify-center items-center hidden"
+        id="home-screen"
+        class="min-h-screen flex justify-center items-center"
       >
         <div class="flex flex-col items-center gap-10">
           <h1 class="text-8xl font-anton uppercase">Alpha Clash Pro</h1>
           <p>Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-          <button class="btn bg-white text-black">Play Now</button>
+          <button onclick="play()" class="btn bg-white text-black">
+            Play Now
+          </button>
         </div>
       </section>
       <!-- play ground -->
-      <section class="play-ground hidden">
+      <section id="play-ground" class="hidden">
         <div class="flex flex-col justify-center items-center gap-20 pt-20">
           <!-- screen -->
 
@@ -46,7 +49,7 @@
             </div>
 
             <div class="flex justify-center items-center min-h-full">
-              <p class="text-black text-9xl font-bold">Y</p>
+              <p id="current-alphabet" class="text-black text-9xl font-bold uppercase">Y</p>
             </div>
           </div>
 
@@ -106,7 +109,9 @@
         </div>
       </section>
       <!-- score part -->
-      <section class="score flex justify-center items-center min-h-screen">
+      <section
+        class="score flex justify-center items-center min-h-screen hidden"
+      >
         <div class="text-center space-y-5 bg-[#FFFFFF33] p-5 rounded-lg">
           <h1 class="text-8xl">
             <span>Score:</span>
@@ -117,5 +122,8 @@
         </div>
       </section>
     </main>
+
+    <script src="js/utility.js"></script>
+    <script src="js/alpha-clash.js"></script>
   </body>
 </html>
