--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
             </div>
 
             <div class="flex justify-center items-center min-h-full">
-              <p id="current-alphabet" class="text-black text-9xl font-bold uppercase">Y</p>
+              <p
+                id="current-alphabet"
+                class="text-black text-9xl font-bold uppercase"
+              >
+                Y
+              </p>
             </div>
           </div>
 
@@ -96,28 +101,29 @@
             >
               <span>Life</span>
               <img src="images/life.svg" alt="#" />
-              <span>1</span>
+              <span id="current-life">5</span>
             </button>
             <button
               class="btn rounded-full text-white bg-[#360490] border-none items-center px-5"
             >
               <span>Score</span>
               <img src="images/score.svg" alt="#" />
-              <span>1</span>
+              <span id="current-score">0</span>
             </button>
           </div>
         </div>
       </section>
       <!-- score part -->
       <section
-        class="score flex justify-center items-center min-h-screen hidden"
+        id="final-score"
+        class="flex justify-center items-center min-h-screen hidden"
       >
         <div class="text-center space-y-5 bg-[#FFFFFF33] p-5 rounded-lg">
           <h1 class="text-8xl">
             <span>Score:</span>
             <span>14</span>
           </h1>
-          <button class="btn">Play Again</button>
+          <button onclick="play()" class="btn">Play Again</button>
           <p>Practice will make you Pro</p>
         </div>
       </section>
