game code end game

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="text-center space-y-5 bg-[#FFFFFF33] p-5 rounded-lg">
           <h1 class="text-8xl">
             <span>Score:</span>
-            <span>14</span>
+            <span id="game-score">14</span>
           </h1>
           <button onclick="play()" class="btn">Play Again</button>
           <p>Practice will make you Pro</p>
